--- a/templates/change-request-detail.html
+++ b/templates/change-request-detail.html
@@ -874,25 +874,29 @@ function closeEditPasswordModal() {
 }
 
 function verifyPasswordAndSave() {
-    console.log('verifyPasswordAndSave 함수 호출됨');
-    const password = document.getElementById('edit-password-input').value;
-    console.log('입력된 비밀번호:', password);
-    
+    const input = document.getElementById('edit-password-input');
+    const password = input ? input.value : '';
+
     if (!password) {
         alert('비밀번호를 입력해주세요.');
+        if (input) {
+            input.focus();
+        }
         return;
     }
-    
-    // 비밀번호가 admin123인지 확인
-    if (password === 'admin123') {
-        console.log('비밀번호 일치 - saveChanges 호출');
-        closeEditPasswordModal();
-        saveChanges();
-    } else {
-        alert('비밀번호가 올바르지 않습니다.');
-        document.getElementById('edit-password-input').value = '';
-        document.getElementById('edit-password-input').focus();
-    }
+
+    BoardDetail.verifyPassword({ boardType: 'change_request', password })
+        .then(() => {
+            closeEditPasswordModal();
+            saveChanges();
+        })
+        .catch((error) => {
+            alert(error && error.message ? error.message : '비밀번호가 올바르지 않습니다.');
+            if (input) {
+                input.value = '';
+                input.focus();
+            }
+        });
 }
 
 // 페이지 로드 시 초기화
